<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".menu.login.LoginActivity"
    android:background="@color/light_gray">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="220dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="logo"
        android:padding="8dp"
        android:src="@drawable/fithub_logo" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sessio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_correu_usuari"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_login_title"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_correu_usuari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correu_usuari"
            android:maxLines="1"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_contrasenya"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_correu_usuari"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_mostrar_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_contrasenya"
        android:layout_below="@id/tl_contrasenya"
        android:layout_alignStart="@id/tl_correu_usuari"
        android:layout_alignEnd="@id/tl_contrasenya"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sessio"
        android:layout_below="@id/check_mostrar_contrasenya"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_oblidat_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblidat_contrasenya"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"/>

    <TextView
        android:id="@+id/tv_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registra_t"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@id/tv_oblidat_contrasenya"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>