...
            android:padding="20dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="Serveis disponibles al centre:" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServeis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
...
